2007-05-26  Paul J Stevens <paul@nfg.nl>

	* imapcommands.c:
	fix search response for empty boxes or empty results
	* acl.c, test-scripts/testimap.py:
	make username in ACL response a proper astring (bug #599)

2007-05-22  Paul Stevens <paul@nfg.nl>

	* ChangeLog, VERSION:
	bump version
	* ChangeLog, dbmail-mailbox.c, imapcommands.c:
	be more carefull before sending BAD invalid message range response

2007-05-22  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	bump version
	* ChangeLog, dbmail-mailbox.c, imapcommands.c:
	be more carefull before sending BAD invalid message range response

2007-05-20  Paul Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-imapsession.h, dbmail-mailbox.c, 
	imap4.c, imapcommands.c:
	fix double free
	* ChangeLog, imapcommands.c:
	always cleanup after FETCH
	* configure, dbmail-imapsession.c, imapcommands.c:
	release bodyfetch earlier
	* dbmail-imapsession.c, dbmail-mailbox.c, imapcommands.c, 
	test-scripts/testimap.py:
	work on expunge response (bug #591)
	* dbmail-imapsession.c, imapcommands.c, test-scripts/testimap.py:
	merge
	* db.c:
	cosmetics
	* test-scripts/torture.sh:
	fix typo
	* test-scripts/torture.sh:
	add torture imapsync test by Peter Rabbitson

2007-05-16  Paul Stevens <paul@nfg.nl>

	* ChangeLog, check_dbmail_deliver.c, check_dbmail_imapd.c, 
	check_dbmail_message.c, check_dbmail_util.c, config.in, db.c, 
	dbmail-imapsession.c, dbmail-mailbox.c, dbmail-user.c, dm_match.c, 
	export.c, imapcommands.c, imapd.c, main.c, maintenance.c, misc.c, 
	user.c:
	g_list_free cleanup
	* .gitignore:
	add file
	* debian/dbmail.postrm:
	don't depend on debconf during purge
	* debian/patches/00-dbmail_conf.dpatch, 
	debian/patches/00-etch.dpatch, debian/patches/00list:
	debian updates
	* debian/changelog:
	update

2007-05-19  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-imapsession.c:
	Fixes for two more memory leaks

2007-05-16  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_deliver.c, check_dbmail_imapd.c, 