@@ -1,3 +1,15 @@
+2007-05-27  Paul J Stevens <paul@nfg.nl>
+
+	* check_dbmail_mailbox.c, dbmail-mailbox.c, imapcommands.c:
+	fix the annoying invalid message range problem
+
+2007-05-26  Paul Stevens <paul@nfg.nl>
+
+	* ChangeLog, imapcommands.c:
+	fix search response for empty boxes or empty results
+	* acl.c, test-scripts/testimap.py:
+	make username in ACL response a proper astring (bug #599)
+
 2007-05-26  Paul J Stevens <paul@nfg.nl>
 
 	* imapcommands.c:
